# luadecng-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
luadec/: Cargo.toml
luadec-cli/: Cargo.toml
luadec-cli/src/: main.rs
luadec/src/: lib.rs
luadec/src/lua51/: ast.rs  cfg.rs  dominator.rs  emit.rs  instruction.rs  lifter.rs  liveness.rs  mod.rs  opcodes.rs
luadec/src/lua51/emit/: cache.rs  mod.rs  normalize.rs  tests.rs
luadec/src/lua51/lifter/: instruction.rs  mod.rs  naming.rs  or_and.rs  register.rs  util.rs
parser/src/: lib.rs  lua53.rs
